# QtSampleApp

./: .clang-format  README.md
.devcontainer/: Dockerfile  build_base_image.sh  devcontainer.json
.devcontainer/base_image/: Dockerfile
src/: CMakeLists.txt
